third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/string/wrong-close.stderr
TOML parse error at line 1, column 39
  |
1 | bad-ending-quote = "double and single'
  |                                       ^
invalid basic string
